--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,12 @@
 .btn {
     margin-bottom: 20px;
 }
+
+.user-form {
+    margin-bottom: 20px;
+}
+
+.calc {    
+    width: 330px;    
+    margin-bottom: 20px;
+}
